Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8
-
Not for ES Release Notes
Description
When you use multiple mariadb CLI's at the same time, for example using Terminator, and you exit the CLI, you will see in x-1 out of x screens (for example 3 out of 4) the following error:
bin/mariadb: Error on rename of '~/.mariadb_history.TMP' to '~/.mariadb_history' (Errcode: 2 "No such file or directory") |
Possible solution: include a nanosec epoch (or a random number) in the rename or similar. Ideally the history would be kept intact also, besides fixing the bug.